--- a/themes/essayist/entry.css
+++ b/themes/essayist/entry.css
@@ -4,7 +4,7 @@
 
 
 .hentry {
-    padding:0 0 22px 0;
+    padding:0 0 0 0;
 }
 .single .hentry {
     padding:0;
@@ -15,10 +15,10 @@
     padding:22px 20px 0 20px;
 }
 .entry-title {
-    font-family:"Helvetica Neue",sans-serif;
-    font-size:26px;
-    font-weight:bold;
-    line-height:26px;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, "Lucida Sans Unicode", Arial, sans-serif;
+    font-size:64px;
+    font-weight:bolder;
+    line-height:1em;
     padding:0 0 7px 0;
     text-align: left;
 }
@@ -93,7 +93,7 @@
     margin-bottom: 0.5em;
     font-weight: bolder;
     border-radius: 5px;
-    line-height: normal;
+    line-height: auto;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     border-right-style: solid;
