--- a/themes/essayist/main.css
+++ b/themes/essayist/main.css
@@ -1,28 +1,105 @@
-.main-content h1 {
+.home-module {
+    width: auto;
     margin-bottom: 0.5em;
     font-weight: bolder;
     border-radius: 5px;
     line-height: normal;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
-    border-right-style: solid;
-    border-left-style: solid;
-    border-bottom-style: solid;
-    border-top-style: solid;
-    border-right-width: 1px;
-    border-left-width: 1px;
-    border-bottom-width: 1px;
-    border-top-width: 1px;
-    border-right-color: #CCCCCC;
-    border-left-color: #CCCCCC;
-    border-bottom-color: #CCCCCC;
-    border-top-color: #CCCCCC;
-    padding-left: 8px;
+    border-style: none;
+    border-width: 0px;
+    border-color: #CCCCCC;
+    padding-left: 16px;
     padding-top: 16px;
-    padding-right: 8px;
+    padding-right: 16px;
     padding-bottom: 16px;
+    overflow: auto;
+    cursor: pointer;
 }
 
-.main-content h1:hover {
-    background-color: #DDDDDD;
+.home-module .home-draft::hover {
+    cursor: auto;
+}
+
+.home-module:hover {
+    background-color: #EEEEEE;
+}
+
+.home-thumb {
+    float: left;
+    clear: left;
+    width: 100px;
+    height: 100px;
+    margin-left: 10px;
+    margin-bottom: 0;
+}
+
+.home-text {
+/*    position: relative;*/
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.5em;
+    float: right;
+    clear: right;
+    width: 630px;
+    margin-right: 10px;
+}
+
+.home-alternate .home-thumb {
+    float:right;
+    clear: right;
+    margin-right: 0;
+    margin-left: 10px;
+}
+
+.home-alternate .home-text {
+    float: left;
+    clear:left;
+    margin-left: 10px;
+    margin-right: 0;
+    text-align: right;
+}
+
+.home-alternate .home-title {
+    text-align: right;
+}
+
+.home-draft {
+    color: #888888;
+}
+
+.home-draft:hover {
+    cursor: default;
+    background-color: #FFFFFF;
+    border-color: #CCCCCC;
+    border-width: 1px;
+    border-style: solid;
+    padding: 15px;
+}
+
+.home-title {
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, "Lucida Sans Unicode", Arial, sans-serif;
+    font-weight: bolder;
+    font-size: 2em;
+    margin-bottom: 0.5em;
+}
+
+.home-section-label {
+    font-size: 11px;
+    text-transform: uppercase;
+    font-weight: 900;
+    color: #EEEEEE;
+    background: #08515F;
+    padding: 3px 8px 3px 8px;
+    margin-top: 5em;
+    margin-bottom: 1em;
+    text-align: right;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    font-family: "Helvetica Neue","Lucida Sans Unicode", Verdana, sans-serif;
+}
+
+.home-section-label:first-child {
+    margin-top: 0;
 }
